# VisionAI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: app_profiles.yaml
config/profiles/: media.yaml  mouse.yaml  presentation.yaml
docs/: gestures_roadmap.md
src/actions/: controller.py  cursor_smoother.py
src/capture/: camera_stream.py  frame_queue.py
src/gestures/: calibration.py  gesture_definitions.py  gesture_state_machine.py  swipe_detector.py
src/hud/: overlay.py
src/profiles/: app_detector.py  profile_loader.py
src/vision/: hand_tracker.py  landmark_utils.py
tests/: test_app_detector.py  test_calibration.py  test_calibration_timestamps.py  test_controller.py  test_cursor_smoother.py  test_gesture_definitions.py  test_gesture_state_machine.py  test_landmark_utils.py  test_profile_loader.py  test_swipe_detector.py
