[project]
name = "visionai"
version = "0.1.0"
description = "VisionAI — framework de control por gestos de mano con IA (MediaPipe) y perfiles intercambiables (mouse, presentación, media)"
requires-python = ">=3.11,<3.14"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
